cmake_minimum_required(VERSION 2.6)

Project(ArduinoCode)

#add_subdirectory(libarduinocore)
#add_subdirectory(floating_blink)
#add_subdirectory(arduino_blink)
#add_subdirectory(avr_blink)
#add_subdirectory(at90_blink)
add_subdirectory(at90_jtag_test)
#add_subdirectory(at90_can_test)
#add_subdirectory(at90_timer_test)
#add_subdirectory(v2_blink)
#add_subdirectory(atmel_test)
#add_subdirectory(int)
#add_subdirectory(canspi)
#add_subdirectory(arduino_spcr)
#add_subdirectory(none)

